# rs-gcloud-switch

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  dist-workspace.toml  release.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: attach-checksum.yml
docs/: plan-profile-sync-via-git.md
src/: app.rs  gcloud.rs  main.rs  profile.rs  store.rs  sync.rs  ui.rs
