[package]
name = "gcloud-switch"
version = "0.9.5"
edition = "2021"
description = "TUI Google Cloud profile switcher"
license = "MIT"
repository = "https://github.com/tjirsch/rs-gcloud-switch"
homepage = "https://github.com/tjirsch/rs-gcloud-switch"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
dirs = "6"
ratatui = "0.29"
reqwest = { version = "0.12", features = ["blocking", "json"] }
rusqlite = { version = "0.34", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
