[package]
name = "gcloud-switch"
version = "0.10.10"
edition = "2021"
description = "TUI Google Cloud profile switcher"
license = "MIT"
repository = "https://github.com/tjirsch/rs-gcloud-switch"
homepage = "https://github.com/tjirsch/rs-gcloud-switch"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
clap_complete = "4.5"
crossterm = "0.29"
dirs = "6"
ratatui = "0.30"
reqwest = { version = "0.13", features = ["blocking", "json", "form"] }
sha2 = "0.10"
hex = "0.4"
rusqlite = { version = "0.38", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.0"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
